Changes to pom.xml